# jotta_tray

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-flatpak.yml  publish-pypi.yml  release.yml  update-aur.yml
packaging/: README.md
packaging/aur/: PKGBUILD  README.md
packaging/flatpak/: README.md  io.github.oal.jotta_tray.metainfo.xml  io.github.oal.jotta_tray.yml
src/jotta_tray/: __init__.py  autostart.py  cli_interface.py  jotta-tray.desktop  main.py  status_monitor.py  tray_widget.py  utils.py
