[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jotta-tray"
version = "0.1.0"
description = "System tray widget for Jotta Cloud sync monitoring on Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jotta Cloud"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment :: Gnome",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyGObject>=3.40.0",
    "pydbus>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jottacloud/jotta-tray"
Repository = "https://github.com/jottacloud/jotta-tray"

[project.scripts]
jotta-tray = "jotta_tray.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jotta_tray"]

[tool.hatch.build.targets.wheel.force-include]
"src/jotta_tray/icons" = "jotta_tray/icons"
